Lab_7/ex_1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EMPTY
    comm
    nl
    ws

Grammar

Rule 0     S' -> prog
Rule 1     prog -> decl_list stmt_list
Rule 2     decl_list -> decl_list decl
Rule 3     decl_list -> <empty>
Rule 4     decl -> type var_list S
Rule 5     decl -> type error S
Rule 6     type -> INT_TYPE
Rule 7     type -> DOUBLE_TYPE
Rule 8     m_copy -> empty
Rule 9     var_list -> var
Rule 10    var_list -> var_list CM m_copy var
Rule 11    var -> ID
Rule 12    var -> ID SO INT SC
Rule 13    stmt_list -> stmt_list stmt
Rule 14    stmt_list -> stmt
Rule 15    stmt_list -> error stmt
Rule 16    stmt -> if
Rule 17    stmt -> while
Rule 18    stmt -> assignment
Rule 19    stmt -> print
Rule 20    stmt -> BO stmt_list BC
Rule 21    stmt -> BO stmt_list error BC
Rule 22    stmt -> BO error BC
Rule 23    stmt -> error S
Rule 24    assignment -> id S
Rule 25    assignment -> id EQ exp S
Rule 26    assignment -> id EQ error S
Rule 27    assignment -> error EQ exp S
Rule 28    print -> PRINT id S
Rule 29    print -> PRINT error S
Rule 30    if -> IF if_condition nt0_if stmt ELSE nt1_if stmt
Rule 31    if -> IF if_condition nt0_if stmt
Rule 32    if -> IF if_condition nt0_if stmt error nt1_if stmt
Rule 33    if_condition -> RO exp RC
Rule 34    if_condition -> RO error RC
Rule 35    if_condition -> error exp RC
Rule 36    if_condition -> RO exp error
Rule 37    nt0_if -> empty
Rule 38    nt1_if -> empty
Rule 39    while -> WHILE while_condition nt0_while stmt
Rule 40    while_condition -> RO exp RC
Rule 41    while_condition -> RO error RC
Rule 42    while_condition -> error exp RC
Rule 43    while_condition -> RO exp error
Rule 44    nt0_while -> empty
Rule 45    exp_int -> INT
Rule 46    exp_int -> MINUS INT
Rule 47    exp_double -> DOUBLE
Rule 48    exp_double -> MINUS DOUBLE
Rule 49    exp -> exp AND exp
Rule 50    exp -> exp OR exp
Rule 51    exp -> NOT exp
Rule 52    exp -> exp EQ EQ exp
Rule 53    exp -> exp MIN exp
Rule 54    exp -> exp MAJ exp
Rule 55    exp -> exp MAJ_EQ exp
Rule 56    exp -> exp EQ_MAJ exp
Rule 57    exp -> exp MIN_EQ exp
Rule 58    exp -> exp EQ_MIN exp
Rule 59    exp -> exp PLUS exp
Rule 60    exp -> exp MINUS exp
Rule 61    exp -> exp STAR exp
Rule 62    exp -> exp DIV exp
Rule 63    exp -> RO exp RC
Rule 64    exp -> exp_double
Rule 65    exp -> exp_int
Rule 66    exp -> id
Rule 67    exp -> RO error RC
Rule 68    id -> ID
Rule 69    id -> ID SO INT SC
Rule 70    id -> ID SO ID SC
Rule 71    empty -> <empty>

Terminals, with rules where they appear

AND                  : 49
BC                   : 20 21 22
BO                   : 20 21 22
CM                   : 10
DIV                  : 62
DOUBLE               : 47 48
DOUBLE_TYPE          : 7
ELSE                 : 30
EMPTY                : 
EQ                   : 25 26 27 52 52
EQ_MAJ               : 56
EQ_MIN               : 58
ID                   : 11 12 68 69 70 70
IF                   : 30 31 32
INT                  : 12 45 46 69
INT_TYPE             : 6
MAJ                  : 54
MAJ_EQ               : 55
MIN                  : 53
MINUS                : 46 48 60
MIN_EQ               : 57
NOT                  : 51
OR                   : 50
PLUS                 : 59
PRINT                : 28 29
RC                   : 33 34 35 40 41 42 63 67
RO                   : 33 34 36 40 41 43 63 67
S                    : 4 5 23 24 25 26 27 28 29
SC                   : 12 69 70
SO                   : 12 69 70
STAR                 : 61
WHILE                : 39
comm                 : 
error                : 5 15 21 22 23 26 27 29 32 34 35 36 41 42 43 67
nl                   : 
ws                   : 

Nonterminals, with rules where they appear

assignment           : 18
decl                 : 2
decl_list            : 1 2
empty                : 8 37 38 44
exp                  : 25 27 33 35 36 40 42 43 49 49 50 50 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63
exp_double           : 64
exp_int              : 65
id                   : 24 25 26 28 66
if                   : 16
if_condition         : 30 31 32
m_copy               : 10
nt0_if               : 30 31 32
nt0_while            : 39
nt1_if               : 30 32
print                : 19
prog                 : 0
stmt                 : 13 14 15 30 30 31 32 32 39
stmt_list            : 1 13 20 21
type                 : 4 5
var                  : 9 10
var_list             : 4 10
while                : 17
while_condition      : 39

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . decl_list stmt_list
    (2) decl_list -> . decl_list decl
    (3) decl_list -> .

    error           reduce using rule 3 (decl_list -> .)
    BO              reduce using rule 3 (decl_list -> .)
    INT_TYPE        reduce using rule 3 (decl_list -> .)
    DOUBLE_TYPE     reduce using rule 3 (decl_list -> .)
    IF              reduce using rule 3 (decl_list -> .)
    WHILE           reduce using rule 3 (decl_list -> .)
    PRINT           reduce using rule 3 (decl_list -> .)
    ID              reduce using rule 3 (decl_list -> .)

    prog                           shift and go to state 1
    decl_list                      shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> decl_list . stmt_list
    (2) decl_list -> decl_list . decl
    (13) stmt_list -> . stmt_list stmt
    (14) stmt_list -> . stmt
    (15) stmt_list -> . error stmt
    (4) decl -> . type var_list S
    (5) decl -> . type error S
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (21) stmt -> . BO stmt_list error BC
    (22) stmt -> . BO error BC
    (23) stmt -> . error S
    (6) type -> . INT_TYPE
    (7) type -> . DOUBLE_TYPE
    (30) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (31) if -> . IF if_condition nt0_if stmt
    (32) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (39) while -> . WHILE while_condition nt0_while stmt
    (24) assignment -> . id S
    (25) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (29) print -> . PRINT error S
    (68) id -> . ID
    (69) id -> . ID SO INT SC
    (70) id -> . ID SO ID SC

    error           shift and go to state 6
    BO              shift and go to state 12
    INT_TYPE        shift and go to state 13
    DOUBLE_TYPE     shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt_list                      shift and go to state 3
    decl                           shift and go to state 4
    stmt                           shift and go to state 5
    type                           shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 3

    (1) prog -> decl_list stmt_list .
    (13) stmt_list -> stmt_list . stmt
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (21) stmt -> . BO stmt_list error BC
    (22) stmt -> . BO error BC
    (23) stmt -> . error S
    (30) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (31) if -> . IF if_condition nt0_if stmt
    (32) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (39) while -> . WHILE while_condition nt0_while stmt
    (24) assignment -> . id S
    (25) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (29) print -> . PRINT error S
    (68) id -> . ID
    (69) id -> . ID SO INT SC
    (70) id -> . ID SO ID SC

    $end            reduce using rule 1 (prog -> decl_list stmt_list .)
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 20
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 4

    (2) decl_list -> decl_list decl .

    error           reduce using rule 2 (decl_list -> decl_list decl .)
    BO              reduce using rule 2 (decl_list -> decl_list decl .)
    INT_TYPE        reduce using rule 2 (decl_list -> decl_list decl .)
    DOUBLE_TYPE     reduce using rule 2 (decl_list -> decl_list decl .)
    IF              reduce using rule 2 (decl_list -> decl_list decl .)
    WHILE           reduce using rule 2 (decl_list -> decl_list decl .)
    PRINT           reduce using rule 2 (decl_list -> decl_list decl .)
    ID              reduce using rule 2 (decl_list -> decl_list decl .)


state 5

    (14) stmt_list -> stmt .

    BO              reduce using rule 14 (stmt_list -> stmt .)
    error           reduce using rule 14 (stmt_list -> stmt .)
    IF              reduce using rule 14 (stmt_list -> stmt .)
    WHILE           reduce using rule 14 (stmt_list -> stmt .)
    PRINT           reduce using rule 14 (stmt_list -> stmt .)
    ID              reduce using rule 14 (stmt_list -> stmt .)
    $end            reduce using rule 14 (stmt_list -> stmt .)
    BC              reduce using rule 14 (stmt_list -> stmt .)


state 6

    (15) stmt_list -> error . stmt
    (23) stmt -> error . S
    (27) assignment -> error . EQ exp S
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (21) stmt -> . BO stmt_list error BC
    (22) stmt -> . BO error BC
    (23) stmt -> . error S
    (30) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (31) if -> . IF if_condition nt0_if stmt
    (32) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (39) while -> . WHILE while_condition nt0_while stmt
    (24) assignment -> . id S
    (25) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (29) print -> . PRINT error S
    (68) id -> . ID
    (69) id -> . ID SO INT SC
    (70) id -> . ID SO ID SC

    S               shift and go to state 23
    EQ              shift and go to state 24
    BO              shift and go to state 12
    error           shift and go to state 21
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt                           shift and go to state 22
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 7

    (4) decl -> type . var_list S
    (5) decl -> type . error S
    (9) var_list -> . var
    (10) var_list -> . var_list CM m_copy var
    (11) var -> . ID
    (12) var -> . ID SO INT SC

    error           shift and go to state 26
    ID              shift and go to state 28

    var_list                       shift and go to state 25
    var                            shift and go to state 27

state 8

    (16) stmt -> if .

    BO              reduce using rule 16 (stmt -> if .)
    error           reduce using rule 16 (stmt -> if .)
    IF              reduce using rule 16 (stmt -> if .)
    WHILE           reduce using rule 16 (stmt -> if .)
    PRINT           reduce using rule 16 (stmt -> if .)
    ID              reduce using rule 16 (stmt -> if .)
    $end            reduce using rule 16 (stmt -> if .)
    BC              reduce using rule 16 (stmt -> if .)
    ELSE            reduce using rule 16 (stmt -> if .)


state 9

    (17) stmt -> while .

    BO              reduce using rule 17 (stmt -> while .)
    error           reduce using rule 17 (stmt -> while .)
    IF              reduce using rule 17 (stmt -> while .)
    WHILE           reduce using rule 17 (stmt -> while .)
    PRINT           reduce using rule 17 (stmt -> while .)
    ID              reduce using rule 17 (stmt -> while .)
    $end            reduce using rule 17 (stmt -> while .)
    BC              reduce using rule 17 (stmt -> while .)
    ELSE            reduce using rule 17 (stmt -> while .)


state 10

    (18) stmt -> assignment .

    BO              reduce using rule 18 (stmt -> assignment .)
    error           reduce using rule 18 (stmt -> assignment .)
    IF              reduce using rule 18 (stmt -> assignment .)
    WHILE           reduce using rule 18 (stmt -> assignment .)
    PRINT           reduce using rule 18 (stmt -> assignment .)
    ID              reduce using rule 18 (stmt -> assignment .)
    $end            reduce using rule 18 (stmt -> assignment .)
    BC              reduce using rule 18 (stmt -> assignment .)
    ELSE            reduce using rule 18 (stmt -> assignment .)


state 11

    (19) stmt -> print .

    BO              reduce using rule 19 (stmt -> print .)
    error           reduce using rule 19 (stmt -> print .)
    IF              reduce using rule 19 (stmt -> print .)
    WHILE           reduce using rule 19 (stmt -> print .)
    PRINT           reduce using rule 19 (stmt -> print .)
    ID              reduce using rule 19 (stmt -> print .)
    $end            reduce using rule 19 (stmt -> print .)
    BC              reduce using rule 19 (stmt -> print .)
    ELSE            reduce using rule 19 (stmt -> print .)


state 12

    (20) stmt -> BO . stmt_list BC
    (21) stmt -> BO . stmt_list error BC
    (22) stmt -> BO . error BC
    (13) stmt_list -> . stmt_list stmt
    (14) stmt_list -> . stmt
    (15) stmt_list -> . error stmt
    (16) stmt -> . if
    (17) stmt -> . while
    (18) stmt -> . assignment
    (19) stmt -> . print
    (20) stmt -> . BO stmt_list BC
    (21) stmt -> . BO stmt_list error BC
    (22) stmt -> . BO error BC
    (23) stmt -> . error S
    (30) if -> . IF if_condition nt0_if stmt ELSE nt1_if stmt
    (31) if -> . IF if_condition nt0_if stmt
    (32) if -> . IF if_condition nt0_if stmt error nt1_if stmt
    (39) while -> . WHILE while_condition nt0_while stmt
    (24) assignment -> . id S
    (25) assignment -> . id EQ exp S
    (26) assignment -> . id EQ error S
    (27) assignment -> . error EQ exp S
    (28) print -> . PRINT id S
    (29) print -> . PRINT error S
    (68) id -> . ID
    (69) id -> . ID SO INT SC
    (70) id -> . ID SO ID SC

    error           shift and go to state 30
    BO              shift and go to state 12
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 19

    stmt_list                      shift and go to state 29
    stmt                           shift and go to state 5
    if                             shift and go to state 8
    while                          shift and go to state 9
    assignment                     shift and go to state 10
    print                          shift and go to state 11
    id                             shift and go to state 17

state 13

    (6) type -> INT_TYPE .

    error           reduce using rule 6 (type -> INT_TYPE .)
    ID              reduce using rule 6 (type -> INT_TYPE .)


state 14

    (7) type -> DOUBLE_TYPE .

    error           reduce using rule 7 (type -> DOUBLE_TYPE .)
    ID              reduce using rule 7 (type -> DOUBLE_TYPE .)


state 15

    (30) if -> IF . if_condition nt0_if stmt ELSE nt1_if stmt
    (31) if -> IF . if_condition nt0_if stmt
    (32) if -> IF . if_condition nt0_if stmt error nt1_if stmt
    (33) if_condition -> . RO exp RC
    (34) if_condition -> . RO error RC
    (35) if_condition -> . error exp RC
    (36) if_condition -> . RO exp error

    RO              shift and go to state 33
    error           shift and go to state 32

    if_condition                   shift and go to state 31

state 16

    (39) while -> WHILE . while_condition nt0_while stmt
    (40) while_condition -> . RO exp RC
    (41) while_condition -> . RO error RC
    (42) while_condition -> . error exp RC
    (43) while_condition -> . RO exp error

    RO              shift and go to state 35
    error           shift and go to state 36

    while_condition                shift and go to state 34

state 17

    (24) assignment -> id . S
    (25) assignment -> id . EQ exp S
    (26) assignment -> id . EQ error S

    S               shift and go to state 37
    EQ              shift and go to state 38


state 18

    (28) print -> PRINT . id S
    (29) print -> PRINT . error S
    (68) id -> . ID
    (69) id -> . ID SO INT SC
    (70) id -> . ID SO ID SC

    error           shift and go to state 40
    ID              shift and go to state 19

    id                             shift and go to state 39

state 19

    (68) id -> ID .
    (69) id -> ID . SO INT SC
    (70) id -> ID . SO ID SC

    S               reduce using rule 68 (id -> ID .)
    EQ              reduce using rule 68 (id -> ID .)
    AND             reduce using rule 68 (id -> ID .)
    OR              reduce using rule 68 (id -> ID .)
    MIN             reduce using rule 68 (id -> ID .)
    MAJ             reduce using rule 68 (id -> ID .)
    MAJ_EQ          reduce using rule 68 (id -> ID .)
    EQ_MAJ          reduce using rule 68 (id -> ID .)
    MIN_EQ          reduce using rule 68 (id -> ID .)
    EQ_MIN          reduce using rule 68 (id -> ID .)
    PLUS            reduce using rule 68 (id -> ID .)
    MINUS           reduce using rule 68 (id -> ID .)
    STAR            reduce using rule 68 (id -> ID .)
    DIV             reduce using rule 68 (id -> ID .)
    RC              reduce using rule 68 (id -> ID .)
    error           reduce using rule 68 (id -> ID .)
    SO              shift and go to state 41


state 20

    (13) stmt_list -> stmt_list stmt .

    BO              reduce using rule 13 (stmt_list -> stmt_list stmt .)
    error           reduce using rule 13 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 13 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 13 (stmt_list -> stmt_list stmt .)
    PRINT           reduce using rule 13 (stmt_list -> stmt_list stmt .)
    ID              reduce using rule 13 (stmt_list -> stmt_list stmt .)
    $end            reduce using rule 13 (stmt_list -> stmt_list stmt .)
    BC              reduce using rule 13 (stmt_list -> stmt_list stmt .)


state 21

    (23) stmt -> error . S
    (27) assignment -> error . EQ exp S

    S               shift and go to state 23
    EQ              shift and go to state 24


state 22

    (15) stmt_list -> error stmt .

    BO              reduce using rule 15 (stmt_list -> error stmt .)
    error           reduce using rule 15 (stmt_list -> error stmt .)
    IF              reduce using rule 15 (stmt_list -> error stmt .)
    WHILE           reduce using rule 15 (stmt_list -> error stmt .)
    PRINT           reduce using rule 15 (stmt_list -> error stmt .)
    ID              reduce using rule 15 (stmt_list -> error stmt .)
    $end            reduce using rule 15 (stmt_list -> error stmt .)
    BC              reduce using rule 15 (stmt_list -> error stmt .)


state 23

    (23) stmt -> error S .

    BO              reduce using rule 23 (stmt -> error S .)
    error           reduce using rule 23 (stmt -> error S .)
    IF              reduce using rule 23 (stmt -> error S .)
    WHILE           reduce using rule 23 (stmt -> error S .)
    PRINT           reduce using rule 23 (stmt -> error S .)
    ID              reduce using rule 23 (stmt -> error S .)
    $end            reduce using rule 23 (stmt -> error S .)
    BC              reduce using rule 23 (stmt -> error S .)
    ELSE            reduce using rule 23 (stmt -> error S .)


state 24
